--- a/index.html
+++ b/index.html
@@ -3,160 +3,83 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>YALL MENU v3.5 - Premium Hub</title>
+    <title>YALL MENU v3.5 - YallaYCode</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Roboto+Mono&display=swap');
-
         body {
-            margin: 0;
-            height: 100vh;
-            background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-            color: #00ffff;
-            font-family: 'Roboto Mono', monospace;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
+            margin: 0; height: 100vh; background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+            color: #00ffff; font-family: 'Roboto Mono', monospace;
+            display: flex; justify-content: center; align-items: center; text-align: center;
         }
-        .container {
-            text-align: center;
-            padding: 40px;
-            background: rgba(10, 10, 20, 0.8);
-            border-radius: 20px;
-            border: 2px solid #00ffff;
-            box-shadow: 0 0 40px rgba(0, 255, 255, 0.4);
-            max-width: 500px;
+        .box {
+            padding: 40px; background: rgba(10,10,20,0.95); border: 2px solid #00ffff;
+            border-radius: 20px; box-shadow: 0 0 50px rgba(0,255, c255,0.5); max-width: 560px;
         }
         .logo {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 60px;
-            font-weight: 900;
-            text-shadow: 0 0 20px #00ffff, 0 0 40px #00ffff;
-            margin-bottom: 10px;
-            letter-spacing: 4px;
+            font-family: 'Orbitron', sans-serif; font-size: 64px; font-weight: 900;
+            text-shadow: 0 0 30px #00ffff; margin-bottom: 10px;
         }
-        .version {
-            color: #00ffaa;
-            font-size: 18px;
-            margin-bottom: 30px;
+        .btn {
+            margin: 20px 10px; padding: 16px 40px; font-size: 22px; font-weight: bold;
+            background: #00ffff; color: black; border: none; border-radius: 12px;
+            cursor: pointer; transition: 0.3s;
         }
-        .load-btn {
-            background: #00ffff;
-            color: #000;
-            padding: 16px 40px;
-            font-size: 22px;
-            font-weight: bold;
-            border: none;
-            border-radius: 12px;
-            cursor: pointer;
-            margin: 15px;
-            transition: all 0.3s;
-            boxyrs: 0 0 20px #00ffff;
-        }
-        .load-btn:hover {
-            background: #00ffaa;
-            transform: scale(1.05);
-            box-shadow: 0 0 30px #00ffaa;
-        }
-        .premium-section {
-            margin-top: 40px;
-            padding-top: 30px;
-            border-top: 1px dashed #00ffff;
-        }
-        input {
-            width: 300px;
-            padding: 14px;
-            margin: 15px;
-            background: rgba(0,0,0,0.6);
-            border: 2px solid #00ffff;
-            border-radius: 10px;
-            color: #00ffff;
-            font-size: 16px;
-            text-align: center;
-        }
+        .btn:hover { background: #00ffaa; transform: scale(1.05); }
+        .btn.yt { background: #ff0000; color: white; }
+        .btn.copy { background: #00ff00; }
         .status {
-            margin-top: 20px;
-            font-size: 18px;
-            min-height: 30px;
+            margin-top: 20px; font-size: 20px; min-height: 40px; font-weight: bold;
         }
-        .footer {
-            margin-top: 50px;
-            font-size: 14px;
-            color: #0088aa;
-        }
+        a { color: #00ffff; text-decoration: underline; }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="box">
         <div class="logo">YALL MENU</div>
-        <div class="version">v3.5 — 2025 Edition</div>
-        <p>Free: Fly • Noclip • ESP • Teleports<br>Premium: Aimbot • Godmode • Silent Aim</p>
+        <p>v3.5 — Made by <a href="https://youtube.com/@YallaYCode" target="_blank">@YallaYCode</a></p>
 
-        <button class="load-btn" onclick="loadFree()">LOAD FREE MENU</button>
+        <button class="btn copy" onclick="copyLoadstring()">
+            LOAD FREE MENU (Copies Loadstring)
+        </button>
 
-        <div class="premium-section">
-            <p>Already have a key?</p>
-            <input type="text" id="keyInput" placeholder="Enter premium key..." autocomplete="off"/>
-            <br/>
-            <button class="load-btn" onclick="unlockPremium()">UNLOCK PREMIUM</button>
+        <div style="margin:30px 0; font-size:18px;">
+            Want Premium (Aimbot, Godmode, Silent Aim)?<br>
+            <b>Task:</b> Subscribe to my YouTube → Click button below
         </div>
+
+        <button class="btn yt" onclick="window.open('https://youtube.com/@YallaYCode','_blank')">
+            SUBSCRIBE ON YOUTUBE
+        </button>
+
+        <button class="btn" onclick="unlockPremium()">
+            I SUBSCRIBED → UNLOCK PREMIUM
+        </button>
 
         <div class="status" id="status"></div>
-
-        <div class="footer">
-            Keys managed via GitHub • Nothing serious<br>
-            <a href="https://github.com/yallcode/Yall-Menu" style="color:#00ffff;">github.com/yallcode/Yall-Menu</a>
-        </div>
     </div>
 
     <script>
-        const FREE_SCRIPT = "https://raw.githubusercontent.com/yallcode/Yall-Menu/main/YallMenu.lua";
-        const KEYS_URL = "https://raw.githubusercontent.com/yallcode/yall-keys/main/keys.txt";
+        const LOADSTRING = 'loadstring(game:HttpGet("https://raw.githubusercontent.com/yallcode/Yall-Menu/main/YallMenu.lua"))()';
+        const PREMIUM_URL = 'https://raw.githubusercontent.com/yallcode/yall-menu-premium/main/premium.lua';
 
-        function loadFree() {
-            const status = document.getElementById("status");
-            status.innerHTML = "Loading free menu...";
-            const script = document.createElement("script");
-            script.text = `loadstring(game:HttpGet("${FREE_SCRIPT}"))()`;
-            document.body.appendChild(script);
+        function copyLoadstring() {
+            navigator.clipboard.writeText(LOADSTRING);
+            document.getElementById("status").innerHTML = 
+                "<span style='color:#00ff00'>Loadstring copied! Paste in your executor</span>";
+        }
+
+        function unlockPremium() {
+            document.getElementById("status").innerHTML = "Unlocking premium...";
+            // First copy free loadstring
+            navigator.clipboard.writeText(LOADSTRING);
             setTimeout(() => {
-                status.innerHTML = "<span style='color:#00ffaa'>Free menu injected! Press RightShift in-game</span>";
-            }, 1500);
+                const s = document.createElement("script");
+                s.text = `loadstring(game:HttpGet("${PREMIUM_URL}"))()`;
+                document.body.appendChild(s);
+                document.getElementById("status").innerHTML = 
+                    "<span style='color:lime'>PREMIUM UNLOCKED + Loadstring copied!</span>";
+            }, 800);
         }
-
-        async function unlockPremium() {
-            const key = document.getElementById("keyInput").value.trim();
-            const status = document.getElementById("status");
-            if (!key) return status.innerHTML = "<span style='color:red'>Enter a key first!</span>";
-
-            status.innerHTML = "Checking key on GitHub...";
-
-            try {
-                const res = await fetch(KEYS_URL);
-                const text = await res.text();
-                const validKeys = text.split("\n").map(k => k.trim()).filter(k => k);
-
-                if (validKeys.includes(key)) {
-                    status.innerHTML = "<span style='color:#00ffaa'>KEY ACCEPTED! Loading premium...</span>";
-                    setTimeout(() => {
-                        loadFree(); // load base first
-                        const premium = document.createElement("script");
-                        premium.text = `loadstring(game:HttpGet("https://raw.githubusercontent.com/yallcode/yall-menu-premium/main/premium.lua"))()`;
-                        document.body.appendChild(premium);
-                        status.innerHTML = "<span style='color:lime'>PREMIUM FULLY UNLOCKED</span>";
-                    }, 1500);
-                } else {
-                    status.innerHTML = "<span style='color:red'>Invalid or expired key</span>";
-                }
-            } catch (e) {
-                status.innerHTML = "<span style='color:red'>Failed to connect to GitHub</span>";
-            }
-        }
-
-        // Auto-focus key input on mobile
-        document.getElementById("keyInput").addEventListener("click", function() {
-            this.select();
-        });
     </script>
 </body>
 </html>
